# ur10_conrtol

./: .gitignore  README.md
ur_base_xarco_model/assembly_description/: CMakeLists.txt  package.xml
ur_base_xarco_model/assembly_description/config/: parametric_experiment.yaml  ros2_controllers.yaml
ur_base_xarco_model/assembly_description/launch/: assembly_bringup.launch.py  display.launch.py  gazebo_moveit.launch.py  one_click_visual.launch.py  parametric_gui.launch.py  replay_csv.launch.py  replay_csv_gazebo.launch.py
ur_base_xarco_model/assembly_description/replay_data/session_2026-05-01_20-24-59/: ur10_ft300_realtime_data.csv
ur_base_xarco_model/assembly_description/rviz/: assembly.rviz
ur_base_xarco_model/assembly_description/scripts/: csv_joint_replay.py  fk_tcp_matrix_from_xacro.py  joint_state_to_gazebo.py  wait_controller_manager.py
ur_base_xarco_model/assembly_description/urdf/: assembly.urdf.xacro
ur_base_xarco_model/assembly_description/urdf/meshes/: base_link_world_jizuo.STL  base_ur10_with_dizuo.STL
ur_base_xarco_model/assembly_description/worlds/: empty.world
ur_base_xarco_model/assembly_parametric_motion/: CMakeLists.txt  package.xml
ur_base_xarco_model/assembly_parametric_motion/src/: parametric_motion_server.cpp
ur_base_xarco_model/assembly_parametric_motion/srv/: ManageExperimentConfig.srv  PreviewPlan.srv  ValidatePlan.srv
ur_base_xarco_model/assembly_rtfg_cpp/: CMakeLists.txt  package.xml
ur_base_xarco_model/assembly_rtfg_cpp/benchmarks/: rtfg_benchmark.py  rtfg_param_sweep.py  rtfg_ros2_cpp_benchmark_diagnostic.csv  rtfg_ros2_cpp_benchmark_diagnostic.json  rtfg_ros2_cpp_benchmark_latest.csv  rtfg_ros2_cpp_benchmark_latest.json  rtfg_ros2_cpp_benchmark_safe.csv  rtfg_ros2_cpp_benchmark_safe.json
ur_base_xarco_model/assembly_rtfg_cpp/config/: assembly_rtfg.srdf  environment_runtime_config.yaml  environment_runtime_config_safe.yaml  kinematics.yaml  ompl_planning.yaml  ros2_controllers.yaml
ur_base_xarco_model/assembly_rtfg_cpp/docs/: collision_pipeline_design.md  current_solver_architecture.md  goal.txt  ik_backend_design.md  ik_planning_diagnosis.md  realtime_architecture_upgrade_report.md  rolling_planner_design.md
ur_base_xarco_model/assembly_rtfg_cpp/docs/ai_handoff_md/: AI_QUICK_ONBOARDING.md  README.md  TOMORROW_PERFORMANCE_PLAN.md
ur_base_xarco_model/assembly_rtfg_cpp/docs/package_overview/: README.md  assembly_rtfg_cpp_overview.md
ur_base_xarco_model/assembly_rtfg_cpp/docs/rtfg_ros2_cpp_技术文档/: 01_架构与节点图.html  02_轨迹生成逻辑.html  03_轨迹拟合与运动学算法.html  04_碰撞检测与狭小姿态策略.html  05_Cpp性能基准与优化记录.html  06_接口运行与验证.html  07_源码模块清单与迁移对照.html  08_验收审计与后续优化计划.html  09_算法公式与调参手册.html  10_ROS2消息字段与排障手册.html  11_性能实验记录模板.html  12_MATLAB_GUI迁移总结.html  README.md  index.html
ur_base_xarco_model/assembly_rtfg_cpp/gui/: package.xml  setup.py
ur_base_xarco_model/assembly_rtfg_cpp/gui/rtfg_gui/: ros_client.py
ur_base_xarco_model/assembly_rtfg_cpp/gui/scripts/: .ros2_launcher.sh  rtfg_launcher.py  rtfg_one_click.sh
ur_base_xarco_model/assembly_rtfg_cpp/include/assembly_rtfg_cpp/: collision_checker.h  collision_pipeline.h  continuous_trajectory_solver.h  ik_backend.h  ik_solver.h  robot_model.h  rolling_planner.h  trajectory_generator.h  trajectory_solver.h  types.h  utils.h
ur_base_xarco_model/assembly_rtfg_cpp/launch/: rtfg_sim.launch.py
ur_base_xarco_model/assembly_rtfg_cpp/rviz/: rtfg_view.rviz
ur_base_xarco_model/assembly_rtfg_cpp/src/: collision_checker.cpp  collision_pipeline.cpp  continuous_trajectory_solver.cpp  ik_backend.cpp  ik_solver.cpp  robot_model.cpp  rolling_planner.cpp  rtfg_solver_node.cpp  trajectory_generator.cpp  trajectory_solver.cpp  utils.cpp
ur_base_xarco_model/assembly_rtfg_cpp/srv/: FitPreview.srv  LoadConfig.srv
ur_base_xarco_model/assembly_rtfg_cpp/test/: rtfg_geometry_check.cpp
ur_base_xarco_model/assembly_rtfg_cpp/urdf/: assembly_rtfg.urdf.xacro  assembly_rtfg_solver.urdf
ur_base_xarco_model/assembly_rtfg_cpp/urdf/meshes/: base_link.STL
ur_base_xarco_model/assembly_rtfg_cuda/: CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  config  gui  package.xml  rviz  srv  urdf
ur_base_xarco_model/assembly_rtfg_cuda/docs/: README.md
ur_base_xarco_model/assembly_rtfg_cuda/docs/01_package_overview/: 01_summary.md  README.md  (+3 more)
ur_base_xarco_model/assembly_rtfg_cuda/launch/: rtfg_sim.launch.py
ur_base_xarco_model/assembly_rtfg_cuda/scripts/: benchmark_cuda_gpu.py  cuda_python_pipeline.py
ur_base_xarco_model/assembly_rtfg_cuda/src/: ik_backend.cpp  rtfg_solver_node.cpp  trajectory_solver.cpp
ur_base_xarco_model/assembly_rtfg_cuda/test/: test_cuda_kernel.cu
ur_base_xarco_model/assembly_rviz_param_panel/: CMakeLists.txt  package.xml  plugin_description.xml
ur_base_xarco_model/assembly_rviz_param_panel/rviz/: parametric_view.rviz
ur_base_xarco_model/assembly_rviz_param_panel/src/: parametric_motion_panel.cpp
ur_base_xarco_model/assembly_rviz_tcp_control/: README.md  package.xml  setup.cfg  setup.py
ur_base_xarco_model/assembly_rviz_tcp_control/launch/: assembly_rviz_tcp_control.launch.py
ur_base_xarco_model/assembly_rviz_tcp_control/resource/: assembly_rviz_tcp_control
ur_base_xarco_model/ur10_real_control_ros2/: CMakeLists.txt  README.md  package.xml
ur_base_xarco_model/ur10_real_control_ros2/config/: assembly_real.srdf  joint_limits.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml
ur_base_xarco_model/ur10_real_control_ros2/docs/: communication_and_ros2_nodes.md  real_control_gui_communication_debugging.md  real_hardware_lab_validation.md  system_architecture.md
ur_base_xarco_model/ur10_real_control_ros2/error_tesk/: 1.txt  2.txt  3.txt  4.txt  5.txt
ur_base_xarco_model/ur10_real_control_ros2/launch/: real_control_gui.launch.py  ur10_real_control.launch.py  ur_driver_only.launch.py
ur_base_xarco_model/ur10_real_control_ros2/scripts/: check_real_ur10_ready.sh  cleanup_real_control_processes.sh  real_control_gui.py  ur10_comm_diagnostics.py
ur_base_xarco_model/ur10_real_control_ros2/urdf/: assembly_real.urdf.xacro  assembly_real_plugin_view.urdf  ur_macro_plugin_compat.xacro
(+104 files in other folders)
