<?xml version="1.0"?>
<package format="3">
  <name>assembly_rtfg_cpp</name>
  <version>0.1.0</version>
  <description>ROS2 C++ rewrite of MATLAB realtime_trajectory_fit_gui for UR10 trajectory fitting.</description>
  <maintainer email="dev@example.com">liuxiaopeng</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>pkg-config</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>

  <depend>ament_index_cpp</depend>
  <depend>control_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>kdl_parser</depend>
  <depend>moveit_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>std_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>urdf</depend>
  <depend>visualization_msgs</depend>
  <depend>yaml-cpp</depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
