<?xml version="1.0"?>
<package format="3">
  <name>assembly_rviz_param_panel</name>
  <version>0.1.0</version>
  <description>RViz2 panel for parametric UR10 shovel experiment workflow.</description>
  <maintainer email="dev@example.com">dev</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>assembly_parametric_motion</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rviz_common</depend>

  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
