<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>assembly_rviz_tcp_control</name>
  <version>0.1.0</version>
  <description>RViz2 and MoveIt2 fake-hardware launch package for controlling the assembly TCP interactive marker.</description>
  <maintainer email="liuxiaopeng@example.com">liuxiaopeng</maintainer>
  <license>MIT</license>

  <exec_depend>assembly_description</exec_depend>
  <exec_depend>assembly_moveit_config</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
