<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur10_real_control_ros2</name>
  <version>0.1.0</version>
  <description>Linux direct-connect real UR10 control package using official ur_robot_driver with assembly MoveIt and RViz integration.</description>
  <maintainer email="liuxiaopeng@example.com">liuxiaopeng</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>moveit_simple_controller_manager</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>ur_robot_driver</exec_depend>
  <exec_depend>ur_description</exec_depend>
  <exec_depend>assembly_description</exec_depend>
  <exec_depend>python3-pyqt5</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
