<?xml version="1.0"?>
<package format="3">
  <name>rtfg_gui</name>
  <version>0.2.0</version>
  <description>PyQt5 desktop control panel for assembly_rtfg_cuda solver</description>
  <maintainer email="dev@example.com">liuxiaopeng</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>control_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>assembly_rtfg_cuda</depend>

  <exec_depend>python3-pyqt5</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
